--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,8 @@ machine-ip = "0.2.1"
 pnet = "0.28.0"
 tokio = { version = "1.10.0", features = ["full"] }
 get_if_addrs = "0.5.3"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+# strum = { version = "0.26", features = ["derive"] }
+strum = "0.26"
+strum_macros = "0.26"
