--- a/stdout-std/Cargo.toml
+++ b/stdout-std/Cargo.toml
@@ -1,10 +1,9 @@
 [package]
-name = "stdout-demo"
+name = "stdout-std"
 version = "0.1.0"
 edition = "2024"
 
 [dependencies]
 tokio = { version = "1.42", features = ["full"] }
 async-trait = "0.1"
-pin-project = "1"
-scopeguard = "1.2"
+pipe = "0.4"
