--- a/actix-web-demo/Cargo.toml
+++ b/actix-web-demo/Cargo.toml
@@ -6,8 +6,18 @@ edition = "2024"
 [dependencies]
 actix-web = "4"
 serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 env_logger = "0.11"
 log = "0.4"
 futures = "0.3"
+
 utoipa = { version = "5.3", features = ["actix_extras"] }
 utoipa-swagger-ui = { version = "9.0", features = ["actix-web"] }
+utoipa-redoc = { version = "6.0", features = ["actix-web"] }
+utoipa-rapidoc = { version = "6.0", features = ["actix-web"] }
+utoipa-scalar = { version = "0.3", features = ["actix-web"] }
+utoipa-actix-web = "0.1"
+
+actix-web-httpauth = "0.8"
+jsonwebtoken = "9.3"
+chrono = "0.4"
