--- a/dotenv-demo/.env
+++ b/dotenv-demo/.env
@@ -1,5 +1,7 @@
 DEMO_HOST=127.0.0.1
 DEMO_PORT=8080
-DEMO_PORT2=8090
 DEMO_DEBUG=true
 DEMO_TIMEOUT=12h
+DEMO_PORT2=8090
+DEMO_ENABLED=true
+DEMO_TIMEOUT2=2h
