--- a/sea-orm-demo/Cargo.toml
+++ b/sea-orm-demo/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [workspace]
-members = [".", "api", "service", "entity", "migration"]
+members = [".", "api", "service", "entity", "migration", "middleware"]
 
 [dependencies]
 actix-example-api = { path = "api" }
