--- a/sea-orm-demo/api/Cargo.toml
+++ b/sea-orm-demo/api/Cargo.toml
@@ -19,3 +19,4 @@ serde = "1"
 tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
 entity = { path = "../entity" }
 migration = { path = "../migration" }
+middleware = { path = "../middleware" }
