--- a/sea-orm-demo/entity/Cargo.toml
+++ b/sea-orm-demo/entity/Cargo.toml
@@ -15,6 +15,9 @@ strum = "0.27"
 strum_macros = "0.27"
 tokio = { version = "1.45", features = ["full"] }
 dotenvy = "0.15"
+log = "0.4"
+tracing-subscriber = "0.3"
+tracing = "0.1"
 
 [dependencies.sea-orm]
 version = "1.1.11"
@@ -24,4 +27,5 @@ features = [
   "sqlx-mysql",
   "with-json",
   "macros",
+  "debug-print",
 ]
