--- a/actix-web-demo/Cargo.toml
+++ b/actix-web-demo/Cargo.toml
@@ -18,7 +18,10 @@ utoipa-redoc = { version = "6.0", features = ["actix-web"] }
 utoipa-rapidoc = { version = "6.0", features = ["actix-web"] }
 utoipa-scalar = { version = "0.3", features = ["actix-web"] }
 utoipa-actix-web = "0.1"
+utoipauto = "0.3.0-alpha.2"
+# utoipauto = { path = "/Volumes/980/Codes/utoipauto/utoipauto" }
 
 actix-web-httpauth = "0.8"
 jsonwebtoken = "9.3"
 chrono = "0.4"
+paste = "1.0"
